--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ html body .block {
 }
 
 body.region-content-top.region-content-top-right #center-top {
-  background:#FFFFFF url(background-images/fauxcol-filler-topcontent2.gif) repeat-y scroll 50% 0;
+  background:#FFFFFF url(../images/background-images/fauxcol-filler-topcontent2.gif) repeat-y scroll 50% 0;
   border-bottom:15px solid white;
   float:right;
   margin:0 0 0 10px;
@@ -120,7 +120,7 @@ body.region-content-top.region-content-top-right #content-top-right {
   background: transparent;
   padding:0px;
   margin-left:0;
-  background:#81837A url(background-images/white-dot.jpg) bottom repeat-x;
+  background:#81837A url(../images/background-images/white-dot.jpg) bottom repeat-x;
   padding:5px 10px;
 }
 .block-menu ul li a, 
@@ -131,7 +131,7 @@ body.region-content-top.region-content-top-right #content-top-right {
   display : inline;
 }
 .block-menu ul li.active-trail {
-  background:#EAEEE3 url(background-images/white-dot.jpg) bottom repeat-x;
+  background:#EAEEE3 url(../images/background-images/white-dot.jpg) bottom repeat-x;
 }
 .block-menu ul li.active-trail a,
 .block-menu ul li.active-trail a:visited {
@@ -151,7 +151,7 @@ body.region-content-top.region-content-top-right #content-top-right {
 
 #block-custom_blocks-1 li.first,
 #block-menu-menu-main li.first {
-  background:#872E2A url(background-images/red-dot.jpg) bottom repeat-x;
+  background:#872E2A url(../images/background-images/red-dot.jpg) bottom repeat-x;
 }
 
 .item-list ul li { margin:0px;}
@@ -400,13 +400,13 @@ color: #9f9894; padding: 1px;}
   padding-right: 10px;
 }
 #rotator-content-front_rotator-nav li.rotator-nav-previous{
-  background:transparent url(background-images/prev-border.gif) no-repeat scroll 0 0;
+  background:transparent url(../images/background-images/prev-border.gif) no-repeat scroll 0 0;
   height:25px;
   width:29px;
   cursor : pointer;
 }
 #rotator-content-front_rotator-nav li.rotator-nav-next{
-  background:transparent url(background-images/feature-counter-next.gif) no-repeat scroll 10px 9px;
+  background:transparent url(../images/background-images/feature-counter-next.gif) no-repeat scroll 10px 9px;
   height:25px;
   width:29px;
   cursor : pointer;
@@ -419,7 +419,7 @@ color: #9f9894; padding: 1px;}
  * banner
  */
 #banner {
-  background:#FFFFFF url(background-images/fauxcol-filler-white.gif) repeat-y scroll 50% 0;
+  background:#FFFFFF url(../images/background-images/fauxcol-filler-white.gif) repeat-y scroll 50% 0;
   margin:0;
   padding:0 0 10px;
 }
@@ -440,12 +440,12 @@ color: #9f9894; padding: 1px;}
   position : absolute;
   top:30px;
   right:17px;
-  background : url(background-images/overview-drop-arrow-open-color.gif) 0 0 no-repeat;
+  background : url(../images/background-images/overview-drop-arrow-open-color.gif) 0 0 no-repeat;
   height : 10px;
   width : 12px;
 }
 #banner #banner-header .collapsed .banner-open-image {
-  background : url(background-images/overview-drop-arrow-color.gif) 0 0 no-repeat;
+  background : url(../images/background-images/overview-drop-arrow-color.gif) 0 0 no-repeat;
 }
 #banner .collapsible-content .node{
   background:#DEE1D7 none repeat scroll 0 0;
@@ -462,7 +462,7 @@ color: #9f9894; padding: 1px;}
  * tools block
  */
 .tools ul li {
-  background-image:url(background-images/icon-print.gif);
+  background-image:url(../images/background-images/icon-print.gif);
   background-position:0.8em 0.5em;
   background-repeat:no-repeat;
   border-bottom:1px dotted #B3B7AA;
@@ -472,19 +472,19 @@ color: #9f9894; padding: 1px;}
   text-transform:uppercase;
 }
 .tools ul li.mail {
-  background-image:url(background-images/icon-email.gif);
+  background-image:url(../images/background-images/icon-email.gif);
   background-position:0.8em 0.7em;
 }
 .tools ul li.rss {
-  background-image:url(background-images/icon-rss.gif);
+  background-image:url(../images/background-images/icon-rss.gif);
   background-position:0.8em 0.7em;
 }
 .tools ul li.feedback {
-  background-image:url(background-images/icon-feedback.gif);
+  background-image:url(../images/background-images/icon-feedback.gif);
   background-position:0.8em 0.7em;
 }
 .tools ul li.share {
-  background-image:url(background-images/icon-share.gif);
+  background-image:url(../images/background-images/icon-share.gif);
   background-position:0.8em 0.7em;
   position:relative;
 }
@@ -507,7 +507,7 @@ color: #9f9894; padding: 1px;}
 */
 
 #highlights {margin: 0px 0px; padding: 10px 0px 0px; width: 958px; position:relative; border: 1px solid #eaeee3; }
-#highlights h6 {background: #fff url(background-images/highlights-back.gif) repeat-x; height: 20px; padding: 0px 0px 0px 10px;}
+#highlights h6 {background: #fff url(../images/background-images/highlights-back.gif) repeat-x; height: 20px; padding: 0px 0px 0px 10px;}
 #highlights h6 {text-transform: uppercase; font-weight: bold; font-size: 0.9em; color: #41423f;margin : 0px;}
 #highlights .highlight img {vertical-align: bottom; float: right;}
 
@@ -579,7 +579,7 @@ div.plus1-widget div.plus1-score {
 }
 body div.plus1-widget {
 
-  background:transparent url(background-images/rating-background.jpg) no-repeat scroll 0 0;
+  background:transparent url(../images/background-images/rating-background.jpg) no-repeat scroll 0 0;
   height:24px;
   width:180px;
   color:#6f726b;
@@ -590,7 +590,7 @@ body div.plus1-widget {
 
 }
 div.plus1-widget div.plus1-vote {
-  background:transparent url(background-images/rating-add-background3.jpg) no-repeat scroll 0 0;
+  background:transparent url(../images/background-images/rating-add-background3.jpg) no-repeat scroll 0 0;
   height:24px;
   width:37px;
 }
