--- a/m4r/views/index.erb
+++ b/m4r/views/index.erb
@@ -17,6 +17,6 @@
   <%# partial :infowindow %>
 </div>
 
-<%= partial :charts %>
+<%# partial :charts %>
 
 <%= partial :projects_table unless @country[:name] == "World" %>
