--- a/m4r/views/projects_table.erb
+++ b/m4r/views/projects_table.erb
@@ -1,6 +1,6 @@
    <!--Project Search Bar Begins-->
     <div id="projects-bar">
-      <div class="project-bar-text"><img src="images/down-arrow-black.gif" alt="" width="11" height="7" class="img-margins" />&nbsp;&nbsp;&nbsp;&nbsp;Total Project List / <%= @country[:name].capitalize %></div>
+      <div class="project-bar-text"><img src="/images/down-arrow-black.gif" alt="" width="11" height="7" class="img-margins" />&nbsp;&nbsp;&nbsp;&nbsp;Total Project List / <%= @country[:name].capitalize %></div>
       <div id="div">
         <form action="/" accept-charset="UTF-8" method="post" id="search-theme-form">
           <input maxlength="128" name="search_theme_form" id="project-search-box" size="15" value="" class="project-search-box-text" type="text" />
