--- a/m4r/views/sector_controls.erb
+++ b/m4r/views/sector_controls.erb
@@ -19,18 +19,18 @@
         <div id="map-content-icons2">
           <ul>
             <li class="sectors">ACTIVE SECTORS:</li>
-            <li class="s1"><a original-title="Public administration Law, Justice" id="sectorcontrol_public" href="javascript:wb.toggleSector('public')">1</a></li>
-            <li class="s2"><a original-title="Agriculture, fishing, forestry" id="sectorcontrol_agriculture" href="javascript:wb.toggleSector('agriculture')">2</a></li>
-            <li class="s3"><a original-title="Health, other social" id="sectorcontrol_health" href="javascript:wb.toggleSector('health')">3</a></li>
-            <li class="s4"><a original-title="Communications" id="sectorcontrol_communications" href="javascript:wb.toggleSector('communications')">4</a></li>
-            <li class="s5"><a original-title="Energy, mining" id="sectorcontrol_energy" href="javascript:wb.toggleSector('energy')">5</a></li>
-            <li class="s6"><a original-title="Finance" id="sectorcontrol_finance" href="javascript:wb.toggleSector('finance')">6</a></li>
-            <li class="s7"><a original-title="Industry, trade" id="sectorcontrol_industry" href="javascript:wb.toggleSector('industry')">7</a></li>
-            <li class="s8"><a original-title="Transportation" id="sectorcontrol_transportation" href="javascript:wb.toggleSector('transportation')">8</a></li>
-            <li class="s9"><a original-title="Water, Sanitation, flood protection" id="sectorcontrol_water" href="javascript:wb.toggleSector('water')">9</a></li>
-            <li class="s10"><a original-title="Education" id="sector11" href="javascript:wb.toggleSector('education')">10</a> </li>
+            <li class="s1"><a  sector-title="public" original-title="Public administration Law, Justice" class="sectorcontrol inactive" id="sectorcontrol_public" href="javascript:wb.toggleSector('public')">1</a></li>
+            <li class="s2"><a  sector-title="agriculture" original-title="Agriculture, fishing, forestry" class="sectorcontrol inactive" id="sectorcontrol_agriculture" href="javascript:wb.toggleSector('agriculture')">2</a></li>
+            <li class="s3"><a  sector-title="health" original-title="Health, other social" class="sectorcontrol inactive" id="sectorcontrol_health" href="javascript:wb.toggleSector('health')">3</a></li>
+            <li class="s4"><a  sector-title="communications" original-title="Communications" class="sectorcontrol inactive" id="sectorcontrol_communications" href="javascript:wb.toggleSector('communications')">4</a></li>
+            <li class="s5"><a  sector-title="energy" original-title="Energy, mining" class="sectorcontrol inactive" id="sectorcontrol_energy" href="javascript:wb.toggleSector('energy')">5</a></li>
+            <li class="s6"><a  sector-title="finance" original-title="Finance" class="sectorcontrol inactive" id="sectorcontrol_finance" href="javascript:wb.toggleSector('finance')">6</a></li>
+            <li class="s7"><a  sector-title="industry" original-title="Industry, trade" class="sectorcontrol inactive" id="sectorcontrol_industry" href="javascript:wb.toggleSector('industry')">7</a></li>
+            <li class="s8"><a  sector-title="transportation" original-title="Transportation" class="sectorcontrol inactive" id="sectorcontrol_transportation" href="javascript:wb.toggleSector('transportation')">8</a></li>
+            <li class="s9"><a  sector-title="water" original-title="Water, Sanitation, flood protection" class="sectorcontrol inactive" id="sectorcontrol_water" href="javascript:wb.toggleSector('water')">9</a></li>
+            <li class="s10"><a sector-title="education" original-title="Education" id="sector11" href="javascript:wb.toggleSector('education')">10</a> </li>
             <li class="s11"><form action="" method="get">
-                <input name="input" type="checkbox" value="" onclick="wb.toggleSector('all')"/>
+                <input name="input" id="sall" class="" type="checkbox" value="" onclick="wb.toggleSector('all')"/>
               </form></li>
             <li class="all">ALL</li>
           </ul>
