--- a/css/layout.css
+++ b/css/layout.css
@@ -274,14 +274,14 @@ overflow:hidden;
 padding-bottom:0;
 position:relative;
 width:960px;
-background:#FFFFFF url(background-images/fauxcol-filler-toplevel2.gif) repeat-y scroll 0 0;
+background:#FFFFFF url(../images/background-images/fauxcol-filler-toplevel2.gif) repeat-y scroll 0 0;
 }
 
 body.region-left.region-far-right div#container {
-  background:#FFFFFF url(background-images/fauxcol-filler2.gif) repeat-y scroll 0 0;
+  background:#FFFFFF url(../images/background-images/fauxcol-filler2.gif) repeat-y scroll 0 0;
   }
 body.region-left.region-right #container {
-  background:#FFFFFF url(background-images/fauxcol-filler-toplevel2.gif) repeat-y scroll 0 0;
+  background:#FFFFFF url(../images/background-images/fauxcol-filler-toplevel2.gif) repeat-y scroll 0 0;
 }
 
 #sidebar-left {
@@ -308,7 +308,7 @@ body.region-left #center {
 }
 
 #center-top {
-  background : #FFFFFF url(background-images/fauxcol-filler-white.gif) repeat-y scroll 50% 0;
+  background : #FFFFFF url(../images/background-images/fauxcol-filler-white.gif) repeat-y scroll 50% 0;
 }
 
 #center-top {
@@ -431,7 +431,8 @@ margin-bottom:10px;
 #languages ul li.more{width:20px;text-indent:-9999px; background-image:url(../images/arrow-languages.gif); background-repeat:no-repeat; background-position:11px 7px; margin:0; padding:0; border-right:solid 1px #fff}
 #languages ul li.more a{border-right:solid 1px #fff}
 
-#share{overflow:hidden;  padding:10px 0 18px 0;}
+/*#share{overflow:hidden;  padding:10px 0 18px 0;}*/
+#share{overflow:hidden;  padding:0px 0 8px 0;}
 #share ul {float:right; list-style:none; margin: 0;padding:0;}
 #share ul li{float:left;}
 #share ul li a, #download ul li a{cursor:pointer;display:block;  line-height:18px;font-size:10px; -moz-border-radius:2px; -webkit-border-radius:2px;background:#fff; color:#989a94;	border:1px solid #ddd; padding:0 4px 0 0}
