--- a/m4r/views/layer_controls.erb
+++ b/m4r/views/layer_controls.erb
@@ -35,9 +35,9 @@
           <ul class="dropmenu <%= 'inactive' if @country[:name] == "World" %>">
             <li class="first"><a href="#" onclick="wb.toggleSector(); return false">PROJECTS</a>
               <ul>
-                <li><a href="" onclick="wb.toggleSector('counts', true); return false">Number by Region</a></li>
-                <li><a href="" onclick="wb.toggleSector('all', true); return false">All Projects</a></li>
-                <li><a href="" onclick="wb.toggleSector('all',false);wb.toggleSector('counts',false); return false">No Projects</a></li>
+                <li><a href="#" onclick="wb.toggleSector('counts', true); return false">Number by Region</a></li>
+                <li><a href="#" onclick="wb.toggleSector('all', true); return false">All Projects</a></li>
+                <li><a href="#" onclick="wb.toggleSector('all',false);wb.toggleSector('counts',false); return false">No Projects</a></li>
               </ul>
             </li>
           </ul>
@@ -45,8 +45,8 @@
           <ul class="dropmenu inactive">
             <li><a href="">RESULTS</a>
               <ul>
-                <li><a href="">Country Profile</a></li>
-                <li><a href="">Project Profile</a></li>
+                <li><a href="#">Country Profile</a></li>
+                <li><a href="#">Project Profile</a></li>
               </ul>
             </li>
             <!-- ... and so on ... -->
