--- a/m4r/views/map_header.erb
+++ b/m4r/views/map_header.erb
@@ -1,7 +1,7 @@
     <div id="map-content-header">
       <div class="worldmenuholder">
         <ul class="worldmenu">
-          <li class="first"><a href="#"><%= @country[:name].upcase %></a>
+          <li class="first"><a href="javascript:return false;" ><%= @country[:name].upcase %></a>
             <ul>
               <% if @country[:name] == "World" %>
               <% @country[:regions].each do |region, region_attr| %>
